	  and assume it has a valid network connection.
	* Allow plugins to specify custom link types to the GtkIMHtml widget.
	* The status message input box at the bottom of the buddy list expands
	  correctly when starting a new line of text.
	* Pressing the Enter key in the message entry box of the New Status
	  dialog and various other dialogs now causes the cursor to move to
	  the next line.

version 2.5.5 (03/01/2009):
	libpurple:
	* Fix a crash when removing an account with an unknown protocol id.
	* Beta support for SSL connections for AIM and ICQ accounts.  To
	  enable, check the "Use SSL" option from the Advanced tab when
	  editing your AIM or ICQ account. (Paul Aurich)
	* Fix a memory leak in SILC. (Luke Petre)
	* Fix some string handling in the SIMPLE prpl, which fixes some buddy name
	  handling and other issues. (Paul Aurich, Marcus Sundberg)
	* Implement support for resolving DNS via the SOCKS4 proxy (SOCKS4a).

	ICQ:
	* Fix retrieval of status messages from users of ICQ 6.x, Miranda, and
	  other libpurple clients. (Daniel Ljungborg)
	* Change client ID to match ICQ Basic 14.34.3096.  This fixes publishing
	  of buddy icons and available messages.
	* Properly publish status messages for statuses other than Available.
	  ICQ 6.x users can now see these status messages. (Daniel Ljungborg)
	* Fix receipt of messages from the mobile client Slick. (David Jedelsky)

	MSN:
	* Fix transfer of buddy icons, custom smileys, and files from the
	  latest Windows Live Messenger 9 official client. (Thomas
	  Gibson-Robinson)
	* Large (multi-part) messages are now correctly re-combined.
	* Federated/Yahoo! buddies should now stop creating sync issues at
	  every signin.  You may need to remove duplicates in the Address
	  Book.  See the FAQ for more information.  Thanks to Jason Lingohr
	  for lots of debugging and testing.
	* Messages from Yahoo! buddies are no longer silently dropped.
	* We now save and use the CacheKey for ABCH SOAP requests.